--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
 include src/ip2loc_server/data/IP2LOCATION-LITE-DB5.CSV.ZIP
 include src/ip2loc_server/data/data_version
+include src/ip2loc_server/data/favicon.ico
